RESOLVED FIXED84727
[4] Fix build when ENABLE_JIT_CONSTANT_BLINDING enabled
https://bugs.webkit.org/show_bug.cgi?id=84727
Summary [4] Fix build when ENABLE_JIT_CONSTANT_BLINDING enabled
thouraya
Reported 2012-04-24 07:55:16 PDT
Building Webkit for Gtk platform(ENABLE_JIT_CONSTANT_BLINDING is enabled), got some undefined functions.
Attachments
fix build issue when ENABLE_JIT_CONSTANT_BLINDING enabled (3.72 KB, patch)
2012-04-24 08:24 PDT, thouraya
no flags
fix build issue when ENABLE_JIT_CONSTANT_BLINDING enabled (3.72 KB, patch)
2012-04-24 08:34 PDT, thouraya
no flags
fix build issue when ENABLE_JIT_CONSTANT_BLINDING enabled (3.68 KB, patch)
2012-04-24 08:45 PDT, thouraya
no flags
thouraya
Comment 1 2012-04-24 08:24:42 PDT
Created attachment 138565 [details] fix build issue when ENABLE_JIT_CONSTANT_BLINDING enabled
WebKit Review Bot
Comment 2 2012-04-24 08:28:45 PDT
Attachment 138565 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/JavaScriptCore/ChangeLog', u'Source..." exit_code: 1 Source/JavaScriptCore/assembler/MacroAssemblerSH4.h:161: Missing space before ( in if( [whitespace/parens] [5] Source/JavaScriptCore/assembler/MacroAssemblerSH4.h:209: Missing space before ( in if( [whitespace/parens] [5] Source/JavaScriptCore/assembler/MacroAssemblerSH4.h:211: One line control clauses should not use braces. [whitespace/braces] [4] Total errors found: 3 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
thouraya
Comment 3 2012-04-24 08:34:43 PDT
Created attachment 138569 [details] fix build issue when ENABLE_JIT_CONSTANT_BLINDING enabled
WebKit Review Bot
Comment 4 2012-04-24 08:37:53 PDT
Attachment 138569 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/JavaScriptCore/ChangeLog', u'Source..." exit_code: 1 Source/JavaScriptCore/assembler/MacroAssemblerSH4.h:211: One line control clauses should not use braces. [whitespace/braces] [4] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
thouraya
Comment 5 2012-04-24 08:45:51 PDT
Created attachment 138572 [details] fix build issue when ENABLE_JIT_CONSTANT_BLINDING enabled
WebKit Review Bot
Comment 6 2012-04-24 17:12:47 PDT
Comment on attachment 138572 [details] fix build issue when ENABLE_JIT_CONSTANT_BLINDING enabled Clearing flags on attachment: 138572 Committed r115144: <http://trac.webkit.org/changeset/115144>
WebKit Review Bot
Comment 7 2012-04-24 17:13:05 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.