Patch by Thouraya ANDOLSI <thouraya.andolsi@st.com> on 2012-04-24 Reviewed by Oliver Hunt.

https://bugs.webkit.org/show_bug.cgi?id=84727.
Fix build when ENABLE_JIT_CONSTANT_BLINDING enabled.

* assembler/MacroAssemblerSH4.h:
(JSC::MacroAssemblerSH4::or32):
(JSC::MacroAssemblerSH4::and32):
(JSC::MacroAssemblerSH4::lshift32):
(JSC::MacroAssemblerSH4::xor32):
(JSC::MacroAssemblerSH4::branchSub32):
(JSC::MacroAssemblerSH4::urshift32):

Canonical link: https://commits.webkit.org/102298@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@115144 268f45cc-cd09-0410-ab3c-d52691b4dbfc